--- a/app.wxss
+++ b/app.wxss
@@ -3,3 +3,20 @@ page{
   font-size: 16px;
   font-family: -apple-system-font,Helvetica Neue,Helvetica,sans-serif;
 }
+
+.page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.page > image {
+  width: 300rpx;
+  margin: 20rpx;
+}
+.btn-group {
+  margin: 30rpx;
+}
+.btn-group > button {
+  width: 100%;
+  margin: 30rpx 0 30rpx 0;
+}
