--- a/pages/about/about.wxml
+++ b/pages/about/about.wxml
@@ -1,3 +1,6 @@
 <view class="page">
-    <text style="margin-top: 300rpx;">This is an about  page</text>
+    <text style="margin-top: 300rpx;">平台：{{platform}}</text>
+    <view class="counter-btns" style="margin-top: 100rpx;">
+        <button bindtap="onShowSystemInfo">获取系统信息</button>
+    </view>
 </view>
